# products_scarper

./: README.md  pyproject.toml  requirements.txt
app/: output.json  scrapy.cfg
app/scarper/: items.py  middlewares.py  pipelines.py  settings.py
app/scarper/spiders/: productos_obra.py  tes.py
