[tool.poetry]
name = "products-scarper"
version = "0.1.0"
description = ""
authors = ["x14119641 <daniel.gil.romero24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
